# ShockChain

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  dvc.yaml  extract.py  params.yaml  pyproject.toml  shockchain_technical_spec.md
.dvc/: config
src/: duckdb_vector_search.py  extract.py  finetune_headline_encoder.py  populate_lancedb.py
