[project]
name = "shockchain"
version = "0.1.0"
description = "translating scenarios in natural language into market shocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'iisignature',  # pytorch compatible signatures
    'torch==2.11.0',
    'polars>=1.39.3',
    'lancedb',  # for Hybrid Search
    'yfinance-pl==0.7.2.2',
    'dvc',
    'transformers',          # AutoTokenizer / AutoModel (HuggingFace)
    'tqdm',                  # progress bars in training loop
]


[dependency-groups]
dev = [
  "pre-commit"
]
lint = [
  "ruff"
]
